quartz/quartz/components/styles/toc.scss
@use "../../styles/variables.scss" as *;

.toc {
  display: flex;
  flex-direction: column;
  overflow-y: hidden;
  min-height: 1.4rem;
  flex: 0 0 auto;
  &:has(button.toc-header.collapsed) {
    flex: 0 1 1.4rem;
  }
}

button.toc-header {
  background-color: transparent;
  border: none;
  text-align: left;
  cursor: pointer;
  padding: 0;
  color: var(--dark);
  display: flex;
  align-items: center;

  & h3 {
    font-size: 1rem;
    display: inline-block;
    margin: 0;
  }

  & .fold {
    margin-left: 0.5rem;
    transition: transform 0.3s ease;
    opacity: 0.8;
  }

  &.collapsed .fold {
    transform: rotateZ(-90deg);
  }
}

ul.toc-content.overflow {
  list-style: none;
  position: relative;
  margin: 0.5rem 0;
  padding: 0;
  max-height: calc(100% - 2rem);
  overscroll-behavior: contain;
  list-style: none;

  & > li > a {
    color: var(--dark);
    opacity: 0.8;
    transition:
      0.2s ease opacity,
      0.2s ease color,
      0.15s ease transform;
    &.in-view {
      opacity: 1;
      font-weight: 500;
    }
    &:hover {
      opacity: 1;
      color: var(--secondary);
      transform: translateX(2px);
    }
  }

  @for $i from 0 through 6 {
    & .depth-#{$i} {
      padding-left: calc(1rem * #{$i});
    }
  }
}

